@@ -6,4 +6,4 @@ perl:
   - "5.16"
 before_install:
   - sudo apt-get install libhunspell-1.3-0 hunspell-en-us libhunspell-dev
-script: "perl Makefile.PL && make test"
+script: "perl Makefile.PL && make disttest"
