@@ -1,15 +1,12 @@
 Changes
-lib/Text/Hoborg.pm
-lib/Text/Hoborg/Manuel.pod
+lib/Test/Text.pm
 Makefile.PL
 MANIFEST			This list of files
-README
+README.md
 t/00.load.t
-t/01.readability.t
-t/words.dic
-t/characters.md
-t/geography.md
-t/text.md
+t/01.spell.t
+text/words.dic
+text/text.md
+text/README.md
 data/en_US.aff		English affixes 
 data/en_US.dic		... and dicts
-
