@@ -1,5 +1,5 @@
 ---
-abstract: 'Spell-and-quality check for texts, including novels. '
+abstract: 'A module for testing '
 author:
   - 'JJ Merelo <jj@merelo.net>'
 build_requires:
@@ -7,20 +7,20 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 0
-generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120630'
+generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.120921'
 license: unknown
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
-name: Text-Hoborg
+name: Test-Text
 no_index:
   directory:
     - t
     - inc
 requires:
   File::Slurp: 0
-  Lingua::EN::Fathom: 0.25
   Test::More: 0
+  Test::Output: 1.03
   Text::Hunspell: 2.08
   version: 0
-version: v0.0.6
+version: v0.0.3
